--- a/scss/styles.css
+++ b/scss/styles.css
@@ -178,6 +178,38 @@ nav {
   .menu a.btn-cta {
     border: inherit;
   }
+  .menu-icon {
+    margin-inline-end: 0.5rem;
+  }
+  .menu-icon .bar {
+    width: 30px;
+    height: 4px;
+    background: var(--clr-primary-600);
+    border-radius: 2px;
+    transition: 0.4s ease;
+  }
+  .menu-icon .bar:not(:first-child) {
+    margin-top: 4px;
+  }
+  #menu-toggle {
+    position: absolute;
+    left: -999px;
+    top: -999px;
+  }
+  #menu-toggle:checked + .menu-icon .bar {
+    transform: rotatey(180deg) rotatex(360deg);
+  }
+  #menu-toggle:checked + .menu-icon .bar:first-child {
+    transform: rotate(-45deg);
+    margin-top: 0px;
+  }
+  #menu-toggle:checked + .menu-icon .bar:nth-child(2) {
+    opacity: 0;
+  }
+  #menu-toggle:checked + .menu-icon .bar:nth-child(3) {
+    margin-top: -12px;
+    transform: rotate(45deg);
+  }
 }
 .hero {
   background-image: url("../images/casohero.jpeg");
@@ -332,6 +364,15 @@ nav {
 .team {
   padding-block: 3.3rem;
 }
+.team h4 {
+  font-size: var(--font-size-200);
+  font-weight: var(--font-weight-300);
+  margin-top: 1.1rem;
+}
+.team span {
+  color: hsl(208, 40%, 9%);
+  font-size: 0.85rem;
+}
 
 .owl-carousel .owl-dot {
   margin-block: 2.2rem;
@@ -482,6 +523,7 @@ nav {
   margin-top: 3.3rem;
   padding: 1rem;
   text-align: center;
+  font-size: 0.85rem;
 }
 
 @media only screen and (min-width: 640px) {
